--- a/tigacrafting/templates/tigacrafting/expert_report_status.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_status.html
@@ -20,14 +20,29 @@
         <link rel="stylesheet" href={% static "tigacrafting/bootstrap-3.2.0-dist/css/bootstrap.min.css" %}>
         <link rel="stylesheet" href={% static "tigacrafting/bootstrap-select/css/bootstrap-select.min.css" %}>    {% endblock %}
 
+    <link rel="stylesheet" href={% static "tigacrafting/tokenize2/tokenize2.min.css" %}>
+
     <script src={% static "tigacrafting/jquery/1.11.1/jquery.min.js" %}></script>
     <script src={% static "tigacrafting/jquery-ui/jquery-ui.min.js" %}></script>
     <link rel="stylesheet" href={% static "tigacrafting/jquery-ui/jquery-ui.css" %}>
+    <script src={% static "tigacrafting/tokenize2/tokenize2.min.js" %}></script>
 
     <script type="text/javascript" src={% static "tigacrafting/jquery-qrcode/jquery.qrcode.min.js" %}></script>
     <style>
         #ex1Slider .slider-selection {
             background: #BABABA;
+        }
+
+        .tokenize-dropdown{
+            z-index: 9999;
+        }
+
+        html body.modal-open div#searchModal.modal.fade.in div.modal-dialog div.modal-content div.modal-body table tbody tr td div.btn-group.bootstrap-select.show-tick.tokenize-report-uuid{
+            display: none;
+        }
+
+        html body.modal-open div#searchModal.modal.fade.in div.modal-dialog div.modal-content div.modal-body table tbody tr td div.btn-group.bootstrap-select.show-tick.tokenize-report-id{
+            display: none;
         }
 
     </style>
@@ -461,7 +476,7 @@
         </div>
     {% endif %}
 
-
+<input id="version_uuid_input" type="text" name="version_uuid" style="display: none;" value="">
 
 </div>
 
@@ -480,6 +495,32 @@
                         <h4 class="modal-title" id="searchModalLabel">Search</h4>
                     </div>
                     <div class="modal-body">
+                        <table style="width:100%;">
+                            <colgroup>
+                                <col span="1" style="width: 25%;">
+                                <col span="1" style="width: 60%;">
+                                <col span="1" style="width: 15%;">
+                            </colgroup>
+                            <tr>
+                                <td><label for="uuid_autocomplete"><small>Report UUID (write in the text box the first 3 characters of the uuid for a list):</small></label></td>
+                                <td>
+                                    <select id="uuid_autocomplete" class="tokenize-report-uuid" multiple></select>
+                                </td>
+                                <td>
+                                    <button type="button" id="search_uuid_autocomplete" class="btn btn-default">Search</button>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td><label for="id_autocomplete"><small>Report Code (write in the text box the first character of the report id for a list):</small></label></td>
+                                <td>
+                                    <select id="id_autocomplete" class="tokenize-report-id" multiple></select>
+                                </td>
+                                <td>
+                                    <button type="button" id="search_id_autocomplete" class="btn btn-default">Search</button>
+                                </td>
+                            </tr>
+                        </table>
+                        <!--
                         <form role="form" class="form-inline">
 
                             <div class="form-group">
@@ -498,6 +539,7 @@
                             </button>
 
                         </form>
+                        -->
 
 
                     </div>
@@ -578,6 +620,66 @@
                 width: 'auto'
             });
 
+            var format_report_label = function(r){
+                return r.report_id + ' - version:' + r.version_number + ' - date:' + r.version_time.substring(0,10);
+            }
+
+            $('.tokenize-report-id').tokenize2({
+                dropdownMaxItems: 15,
+                searchMinLength: 1,
+                tokensMaxItems: 1,
+                zIndexMargin: 9999,
+                dataSource: function(term, object){
+                    $.ajax('/api/reports_id_filtered/', {
+                        data: { report_id: term, start: 0 },
+                        dataType: 'json',
+                        success: function(data){
+                            var $items = [];
+                            $.each(data, function(k, v){
+                                $items.push({"text": format_report_label(v),"value": v.version_UUID });
+                            });
+                            object.trigger('tokenize:dropdown:fill', [$items]);
+                        }
+                    });
+                }
+            });
+
+            $('.tokenize-report-uuid').tokenize2({
+                dropdownMaxItems: 15,
+                searchMinLength: 3,
+                tokensMaxItems: 1,
+                zIndexMargin: 9999,
+                dataSource: function(term, object){
+                    $.ajax('/api/uuid_list_autocomplete/', {
+                        data: { uuid: term, loc: $('#loc_input').val(), start: 0 },
+                        dataType: 'json',
+                        success: function(data){
+                            var $items = [];
+                            $.each(data, function(k, v){
+                                $items.push({"text": v.report__version_UUID,"value": v.report__version_UUID });
+                            });
+                            object.trigger('tokenize:dropdown:fill', [$items]);
+                        }
+                    });
+                }
+            });
+
+            $('.tokenize-report-uuid').on('tokenize:tokens:add', function(e, value, text){
+                $("#version_uuid_input").val(value);
+            });
+
+            $('.tokenize-report-uuid').on('tokenize:tokens:remove', function(e, value){
+                $("#version_uuid_input").val('');
+            });
+
+            $('.tokenize-report-id').on('tokenize:tokens:add', function(e, value, text){
+                $("#version_uuid_input").val(value);
+            });
+
+            $('.tokenize-report-id').on('tokenize:tokens:remove', function(e, value){
+                $("#version_uuid_input").val('');
+            });
+
           {% for report in reports %}
 
                 jQuery('#qrcode{{ forloop.counter }}').qrcode({
@@ -594,9 +696,14 @@
 
         function submit_search_version_uuid() {
             gear.show();
-            var this_version_uuid = $("#version_uuid_select").val();
+            /*var this_version_uuid = $("#version_uuid_select").val();*/
+            var this_version_uuid = $("#version_uuid_input").val();
             window.location.href = '?version_uuid=' + this_version_uuid;
         }
+
+        $("#search_uuid_autocomplete").on('click', submit_search_version_uuid);
+
+        $("#search_id_autocomplete").on('click', submit_search_version_uuid);
 
         $("#search_version_uuid_submit_button").on('click', submit_search_version_uuid);
 
