Testing new encoded notifications, just el locale

--- a/tigaserver_app/templates/tigaserver_app/award_notification_el.html
+++ b/tigaserver_app/templates/tigaserver_app/award_notification_el.html
@@ -1,7 +1,7 @@
 {% extends "tigaserver_app/award_notification.html" %}
 
 {% block title_block %}
-    <title>&Mu;ό&lambda;&iota;&sigmaf; &lambda;ά&beta;&alpha;&tau;&epsilon; έ&nu;&alpha; &beta;&rho;&alpha;&beta;&epsilon;ί&omicron; &pi;ό&nu;&tau;&omega;&nu;!</title>
+    <title>&#924;&#972;&#955;&#953;&#962; &#955;&#940;&#946;&#945;&#964;&#949; &#941;&#957;&#945; &#946;&#961;&#945;&#946;&#949;&#943;&#959; &#960;&#972;&#957;&#964;&#969;&#957;!</title>
 {% endblock %}
 
 {% block title_header_block %}
@@ -9,11 +9,11 @@
 {% endblock %}
 
 {% block amount_xp_awarded %}
-    <p>'&Mu;ό&lambda;&iota;&sigmaf; &lambda;ά&beta;&alpha;&tau;&epsilon; &pi;ό&nu;&tau;&omicron;&upsilon;&sigmaf;' <b style="color:red;">{{ amount_awarded }}</b></p>
+    <p>&#924;&#972;&#955;&#953;&#962; &#955;&#940;&#946;&#945;&#964;&#949; &#960;&#972;&#957;&#964;&#959;&#965;&#962; <b style="color:red;">{{ amount_awarded }}</b></p>
 {% endblock %}
 
 {% block reason_awarded %}
-    <p>&Epsilon;&pi;&epsilon;&iota;&delta;ή: {{ reason_awarded }}</p>
+    <p>&#923;&#972;&#947;&#959;&#962;: {{ reason_awarded }}</p>
 {% endblock %}
 
 {% block report_related %}
@@ -23,5 +23,5 @@
 {% endblock %}
 
 {% block congratulations %}
-    <p>&Sigma;&upsilon;&gamma;&chi;&alpha;&rho;&eta;&tau;ή&rho;&iota;&alpha;!</p>
+    <p>&#931;&#965;&#947;&#967;&#945;&#961;&#951;&#964;&#942;&#961;&#953;&#945;!</p>
 {% endblock %}
