--- a/tigaserver_app/templates/tigaserver_app/award_notification_de.html
+++ b/tigaserver_app/templates/tigaserver_app/award_notification_de.html
@@ -1,7 +1,7 @@
 {% extends "tigaserver_app/award_notification.html" %}
 
 {% block title_block %}
-    <title>Sie haben gerade eine Punktepr&auml;mie erhalten!</title>
+    <title>Sie haben gerade eine Punkteprämie erhalten!</title>
 {% endblock %}
 
 {% block title_header_block %}
@@ -23,5 +23,5 @@
 {% endblock %}
 
 {% block congratulations %}
-    <p>Herzliche Gl&uuml;ckw&uuml;nsche!</p>
+    <p>Herzliche Glückwünsche!</p>
 {% endblock %}
