--- a/tigaserver_app/templates/tigaserver_app/award_notification_es.html
+++ b/tigaserver_app/templates/tigaserver_app/award_notification_es.html
@@ -3,7 +3,7 @@
 <html lang="es">
 {% endblock %}
 {% block title_block %}
-    <title>&iexcl;Acabas de recibir una recompensa de puntos!</title>
+    <title>¡Acabas de recibir una recompensa de puntos!</title>
 {% endblock %}
 
 {% block title_header_block %}
@@ -25,5 +25,5 @@
 {% endblock %}
 
 {% block congratulations %}
-    <p>&iexcl;Felicidades!</p>
+    <p>¡Felicidades!</p>
 {% endblock %}
