--- a/tigaserver_app/templates/tigaserver_app/award_notification_fr.html
+++ b/tigaserver_app/templates/tigaserver_app/award_notification_fr.html
@@ -1,7 +1,7 @@
 {% extends "tigaserver_app/award_notification.html" %}
 
 {% block title_block %}
-    <title>Vous venez de recevoir une r&eacute;compense de points!</title>
+    <title>Vous venez de recevoir une récompense de points!</title>
 {% endblock %}
 
 {% block title_header_block %}
@@ -23,5 +23,5 @@
 {% endblock %}
 
 {% block congratulations %}
-    <p>Toutes nos f&eacute;licitations!</p>
+    <p>Toutes nos félicitations!</p>
 {% endblock %}
