--- a/tigaserver_app/templates/tigaserver_app/award_notification_lb.html
+++ b/tigaserver_app/templates/tigaserver_app/award_notification_lb.html
@@ -1,7 +1,7 @@
 {% extends "tigaserver_app/award_notification.html" %}
 
 {% block title_block %}
-    <title>Dir krut grad e Punktepr&auml;is!</title>
+    <title>Dir krut grad e Punktepräis!</title>
 {% endblock %}
 
 {% block title_header_block %}
@@ -13,7 +13,7 @@
 {% endblock %}
 
 {% block reason_awarded %}
-    <p>W&eacute;inst: {{ reason_awarded }}</p>
+    <p>Wéinst: {{ reason_awarded }}</p>
 {% endblock %}
 
 {% block report_related %}
