--- a/tigaserver_app/templates/tigaserver_app/award_notification_tr.html
+++ b/tigaserver_app/templates/tigaserver_app/award_notification_tr.html
@@ -1,7 +1,7 @@
 {% extends "tigaserver_app/award_notification.html" %}
 
 {% block title_block %}
-    <title>Az &ouml;nce bir puan &ouml;d&uuml;l&uuml; aldınız!</title>
+    <title>Az önce bir puan ödülü aldınız!</title>
 {% endblock %}
 
 {% block title_header_block %}
@@ -13,7 +13,7 @@
 {% endblock %}
 
 {% block reason_awarded %}
-    <p>&Ccedil;&uuml;nk&uuml;: {{ reason_awarded }}</p>
+    <p>Çünkü: {{ reason_awarded }}</p>
 {% endblock %}
 
 {% block report_related %}
