--- a/tigacrafting/templates/tigacrafting/expert_report_status.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_status.html
@@ -511,7 +511,7 @@
                                 </td>
                             </tr>
                             <tr>
-                                <td><label for="id_autocomplete"><small>Report Code (write in the text box the first character of the report id for a list):</small></label></td>
+                                <td><label for="id_autocomplete"><small>Report Code (write in the text box the first 2 characters of the report id for a list):</small></label></td>
                                 <td>
                                     <select id="id_autocomplete" class="tokenize-report-id" multiple></select>
                                 </td>
@@ -626,7 +626,7 @@
 
             $('.tokenize-report-id').tokenize2({
                 dropdownMaxItems: 15,
-                searchMinLength: 1,
+                searchMinLength: 2,
                 tokensMaxItems: 1,
                 zIndexMargin: 9999,
                 dataSource: function(term, object){
