--- a/stats/templates/stats/global_assignments.html
+++ b/stats/templates/stats/global_assignments.html
@@ -9,11 +9,13 @@
     <link rel="stylesheet" href="{% static 'tigacrafting/bootstrap-3.2.0-dist/css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'tigacrafting/bootstrap-select/css/bootstrap-select.min.css' %}">
     <link rel="stylesheet" href="{% static 'stats/workload.css' %}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
     <script src="https://code.highcharts.com/stock/highstock.js"></script>
     <script src="https://code.highcharts.com/stock/highcharts-more.js"></script>
     <script src="https://code.highcharts.com/stock/modules/exporting.js"></script>
     <script src="https://code.highcharts.com/modules/solid-gauge.js"></script>
+
     <script>
         var data = JSON.parse('{{ encoded_data|safe }}');
     </script>
@@ -30,6 +32,7 @@
         }
     </style>
   </head>
+<body>
   <div class="navbar-wrapper">
         <div class="container">
             <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
@@ -48,7 +51,7 @@
             </div>
         </div>
     </div>
-  <body>
+
   <div style="margin-top:60px"></div>
   <div class="container-custom">
       <div class="row solid-border">
@@ -83,12 +86,27 @@
             <div class="row">
                 <div class="col-md-3">
                     <div id="{{ d.ns_country_code }}_unassigned" style="height: 200px; margin: 0 auto"></div>
+                    <div style="padding-top: 15px;">
+                        <p style="text-align: center;">
+                            <a id="{{ d.ns_country_code }}_unassigned_list" class="btn btn-primary" href="{% url 'global_assignments_list' country_code=d.ns_country_code status='unassigned' %}"><i class="fas fa-list"></i>&nbsp; Unassigned report list</a>
+                        </p>
+                    </div>
                 </div>
                 <div class="col-md-3">
                     <div id="{{ d.ns_country_code }}_progress" style="height: 200px; margin: 0 auto"></div>
+                    <div style="padding-top: 15px;">
+                        <p style="text-align: center;">
+                            <a id="{{ d.ns_country_code }}_progress_list" class="btn btn-primary" href="{% url 'global_assignments_list' country_code=d.ns_country_code status='progress' %}"><i class="fas fa-list"></i>&nbsp; Reports in progress list</a>
+                        </p>
+                    </div>
                 </div>
                 <div class="col-md-3">
                     <div id="{{ d.ns_country_code }}_pending" style="height: 200px; margin: 0 auto"></div>
+                    <div style="padding-top: 15px;">
+                        <p style="text-align: center;">
+                            <a id="{{ d.ns_country_code }}_pending_list" class="btn btn-primary" href="{% url 'global_assignments_list' country_code=d.ns_country_code status='pending' %}"><i class="fas fa-list"></i>&nbsp; Pending reports list</a>
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
