--- a/tigapublic/static/tigapublic/css/style.css
+++ b/tigapublic/static/tigapublic/css/style.css
@@ -1463,3 +1463,14 @@ div#layer-title-container{
   line-height: 2;
   display:block;
 }
+
+#trap-chart-filters {
+  font-family: sans-serif;
+  font-size: 12px;
+  font-weight: 600;
+}
+
+#trap-chart-filters label {
+  cursor: pointer;
+}
+
